--- a/packages/web-components/src/components/va-icon/va-icon.scss
+++ b/packages/web-components/src/components/va-icon/va-icon.scss
@@ -3,6 +3,6 @@
 
 :host {
   display: inline-block;
-  line-height: 0;
+  line-height: 0 !important;
   vertical-align: bottom;
 }
